[package]
name = "tower-helmet"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = { version = "0", optional = true }
axum-core = { version = "0.4", optional = true }
tower-service = "0.3"
futures-util = "0.3"
tower-layer = "0.3"
thiserror = "1"
rand = "0.8"
http = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
axum = "0.7"

[features]
default = []
axum = ["dep:axum-core", "dep:async-trait"]
