[package]
name = "tower-sombrero"
version = "0.1.0"
edition = "2021"
description = "Tower middleware and utilities to help harden web applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomairborne/tower-sombrero"
keywords = ["csp", "tower", "http", "security"]
categories = ["web-programming::http-server"]

[dependencies]
axum-core = { version = "0.5", optional = true }
tower-service = "0.3"
futures-util = "0.3"
tower-layer = "0.3"
thiserror = "2"
rand = "0.8"
http = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
axum = "0.8"

[features]
default = []
axum = ["dep:axum-core"]
